<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_txt"
        android:id="@+id/email_editText"
        android:layout_above="@+id/password_editText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:hint="@string/password_txt"
        android:id="@+id/password_editText"
        android:layout_above="@+id/forgot_password_text_view"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/forgot_password_text_view"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="@string/forgot_pwd_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_txt"
        android:layout_margin="20dp"
        android:id="@+id/login_button"
        android:layout_above="@+id/signup_textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sign_up_txt"
        android:layout_alignParentBottom="true"
        android:id="@+id/signup_textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />
</RelativeLayout>
