<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:hint="@string/first_name_txt"
            android:id="@+id/first_name_editText" />

        <EditText
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:hint="@string/first_name_txt"
            android:id="@+id/last_name_editText"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_txt"
        android:id="@+id/email_editText"
        android:layout_below="@+id/nameLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />

    <LinearLayout
        android:id="@+id/mobileNoLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_below="@+id/email_editText"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="+91" />

        <EditText
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:hint="@string/phone_number_txt"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:id="@+id/mobile_number_edittext" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_txt"
        android:id="@+id/password_editText"
        android:layout_below="@+id/mobileNoLayout"
        android:layout_margin="20dp" />

    <Button
        android:layout_below="@+id/password_editText"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_txt"
        android:id="@+id/verify_button"/>
</RelativeLayout>
