<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="320dp"
    android:minWidth="300dp">

    <EditText
        android:id="@+id/customer_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_txt"
        android:inputType="textEmailAddress"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<EditText
        android:id="@+id/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:hint="@string/phone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:text="+91"
            android:id="@+id/prefix_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_margin="10dp"
            android:nextFocusDown="@+id/reset_pin"
            android:hint="@string/phone_number_txt"
            android:maxLength="10"
            android:inputType="phone"
            android:id="@+id/mobile_number"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_margin="10dp"
        android:text="@string/send_password"
        android:id="@+id/reset_pin"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

</LinearLayout>
