<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_480x640"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/typeLayout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <TextView
            android:visibility="gone"
            android:layout_margin="20dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/food_type_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:id="@+id/packed_text"
            android:layout_margin="20dp"
            android:background="@drawable/red_circle"
            android:text="@string/packed_txt"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_above="@+id/center_view"
            android:gravity="center"
            android:layout_height="150dp" />

        <View
            android:visibility="gone"
            android:id="@+id/center_view"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_margin="20dp"
            android:layout_height="1dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/brick_red"
            android:visibility="visible"
            android:src="@mipmap/sharefood"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/raw_material"
            android:layout_below="@+id/center_view"
            android:layout_margin="20dp"
            android:visibility="gone"
            android:background="@drawable/blue_circle"
            android:text="@string/raw_materials"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_height="150dp" />

    </RelativeLayout>

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/confirmLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/header_view"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_layout"
                android:gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/selected_type"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/brick_red"
                    android:visibility="visible"
                    android:src="@mipmap/sharefood"
                    app:elevation="6dp"
                    app:pressedTranslationZ="12dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/selectedType"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_below="@+id/header_view"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/inner_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:id="@+id/current_location_layout"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/current_location"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/current_location"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/destination_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_below="@+id/current_location_layout"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/destination_txt"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/destination_name"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                android:id="@+id/fare_estimate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_below="@+id/destination_layout"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/fare_estimate"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/fareProgressBar"
                        android:visibility="visible"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/android:progressBarStyleSmall" />

                    <TextView
                        android:id="@+id/fare_estimate"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/bookBtn"
            android:layout_alignParentBottom="true"
            android:text="@string/book_cab"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</RelativeLayout>